# ros_object_detector

./: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
catkin_generated/installspace/: object_detector.pc  object_detectorConfig.cmake
launch/: object_detector.launch
src/: find_object.cpp
